# chess

./: CMakeLists.txt  Makefile  README.md  chess.vcxproj  chess.vcxproj.filters
include/Chess/: Audio.h  Bishop.h  Board.h  Chess.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
include/Chess/Pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Piece.h  Queen.h  Rook.h
src/: main.cpp
src/Chess/: Audio.cpp  Bishop.cpp  Board.cpp  Chess.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
src/Chess/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  Rook.cpp
